2015-05-04  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Windows/Interop.Windows.EAs.cs:
	  Implement callings for Extended Attributes on NT.

	* Interop/Windows/Interop.Windows.Errors.cs:
	* Interop/Windows/Interop.Windows.Libraries.cs:
	  Typo.

2015-05-04  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Windows/Interop.Windows.Errors.cs:
	* Interop/Windows/Interop.Windows.Libraries.cs:
	  Added Windows NT libraries and errors.

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Interop/FreeBSD/Interop.FreeBSD.extattr.cs:
	  Correct extern declarations.

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/FreeBSD/Interop.FreeBSD.extattr.cs:
	  Implemented FreeBSD's extattr(2).

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/FreeBSD/Interop.FreeBSD.types.cs:
	* Interop/FreeBSD/Interop.FreeBSD.statfs.cs:
	  Implement FreeBSD's statfs(2).

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/FreeBSD/Interop.FreeBSD.stat.cs:
	* Interop/FreeBSD/Interop.FreeBSD.types.cs:
	  Implement FreeBSD's stat(2).

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Interop/Linux/Interop.Linux.stat.cs:
	  Manpages are in octal, corrected typo.

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/FreeBSD/Interop.FreeBSD.uname.cs:
	  Implement FreeBSD's uname(3)

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/FreeBSD/Interop.FreeBSD.Errors.cs:
	* Interop/FreeBSD/Interop.FreeBSD.Libraries.cs:
	  Add FreeBSD libc and errno.

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Linux/Interop.Linux.stat.cs:
	* Interop/Linux/Interop.Linux.types.cs:
	  Implemented Linux's stat(2).

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Interop/Linux/Interop.Linux.types.cs:
	* Interop/Linux/Interop.Linux.statfs.cs: